<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resulttext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/newtext"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:text="Unavailable"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/save" />

    <Button
        android:id="@+id/adjectext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="adjectext2"
        android:text="@string/adjectext2" />

    <Button
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="home"
        android:text="@string/home" />

</LinearLayout>